--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 	padding: 0px !important;
 	max-width: unset;
 	overflow: hidden;
+	font-size: 16px;
 }
 .row {
 	display: -ms-flexbox;
@@ -39,7 +40,7 @@
 .logo .brand {
 	color: #090536;
 	font-family: 'Josefin Sans', sans-serif;
-	font-size: 24px;
+	font-size: 1.25rem;
 	font-weight: 800;
 	padding-left: 5px;
 }
@@ -55,12 +56,12 @@
 	text-align: left;
 }
 .heading-content h1 {
-	font-size: 38px;
+	font-size: 2.25rem;
 	font-weight: 700;
 	line-height: 51px;
 }
 .heading-content p {
-	font-size: 20px;
+	font-size: 1.25px;
 	font-weight: 600;
 	line-height: 27px;
 	color: rgb(163, 159, 159);
@@ -70,12 +71,13 @@
 	width: 95%;
 }
 .text {
-	font-size: 14px;
+	font-size: 1rem;
 	font-weight: 400;
 	line-height: 18px;
+	max-width: 90%;
 }
 .guide {
-	font-size: 13px;
+	font-size: 1rem;
 	font-weight: 400;
 	line-height: 21px;
 	color: rgb(163, 159, 159);
@@ -87,8 +89,8 @@
 	position: relative;
 	padding: 0px;
 	margin: 350px auto;
-	width: 70%;
-	font-size: 24px;
+	width: 60%;
+	font-size: 1.5rem;
 	font-weight: 400;
 	line-height: 36px;
 	color: #656e7d;
@@ -106,8 +108,8 @@ select {
 	border-style: none;
 	border-bottom: solid 2px #656e7d;
 	position: relative;
-	height: 30px;
-	font-size: 20px;
+	height: 2rem;
+	font-size: 1.2rem;
 	font-weight: 400;
 	outline: none;
 	color: #656e7d;
@@ -136,7 +138,7 @@ select {
 	transition: transform 800ms ease 0.5s, opacity 500ms ease 0s;
 }
 .step3 {
-	font-size: 22px;
+	font-size: 1.5rem;
 	transition: transform 800ms ease 0.5s, opacity 500ms ease 0s;
 }
 .step4 {
